--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <form>
+    <form method="POST" data-netlify="true">
     <h1>DCR</h1>
     <div class="language">
       <!-- <label for="language">Select a language</label> -->
@@ -70,6 +70,7 @@
       </select>
       </div>
     </div>
+    <button type="submit">Send</button>
   </form>
 </div>
 
